--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -34,6 +34,7 @@
   "Invalid Credentials": "Invalid Credentials",
   "Login again": "Login again",
   "Username": "Username",
+  "Username is required": "Username is required",
 
   "Welcome back, {{name}}": "Welcome back, {{name}}",
   "Session Expired": "Session expired",
@@ -55,6 +56,7 @@
   "Password must be at least 8 characters": "Password must be at least 8 characters",
   "Changing your password will log you out from all devices.": "Changing your password will log you out from all devices.",
 
+  "Success": "Success",
   "Download": "Download",
   "Add": "Add",
   "Add New": "Add New",
@@ -104,6 +106,8 @@
   "Enter the details for the new bill": "Enter the details for the new bill",
   "Edit Bill": "Edit Bill",
   "Edit the bill details.": "Edit the bill details.",
+  "Bill was added successfully.": "Bill was added successfully.",
+  "Bill was updated successfully.": "Bill was updated successfully.",
   "A list of bills": "A list of bills",
   "Range Sum": "Range Sum",
   "Sum of all bills in the selected range.": "Sum of all bills in the selected range.",
