fix(redirect):pass search after login

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -105,7 +105,7 @@
   "New Bill": "New Bill",
   "Enter the details for the new bill": "Enter the details for the new bill",
   "Edit Bill": "Edit Bill",
-  "Edit the bill details.": "Edit the bill details.",
+  "Edit the bill details": "Edit the bill details",
   "Bill was added successfully.": "Bill was added successfully.",
   "Bill was updated successfully.": "Bill was updated successfully.",
   "A list of bills": "A list of bills",
