fix(react-query): fixed default settings

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -138,6 +138,7 @@
   "You are not authorized to view this page.": "ليس لديك صلاحية لعرض هذه الصفحة.",
   "Your adventure ends here, brave traveler.": "مغامرتك تنتهي هنا أيها المسافر الشجاع.",
   "Go back home": "العودة للصفحة الرئيسية",
+  "Retry": "اعادة المحاولة",
 
   "Made with ❤️ by": "صنع بكل ❤️ من قبل"
 }
