--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -138,6 +138,7 @@
   "You are not authorized to view this page.": "You are not authorized to view this page.",
   "Your adventure ends here, brave traveler.": "Your adventure ends here, brave traveler.",
   "Go back home": "Go back home",
+  "Retry": "Retry",
 
   "Made with ❤️ by": "Made with ❤️ by"
 }
