--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -108,6 +108,7 @@
   "Edit the bill details": "Edit the bill details",
   "Bill was added successfully.": "Bill was added successfully.",
   "Bill was updated successfully.": "Bill was updated successfully.",
+  "Bill was deleted successfully.": "Bill was deleted successfully.",
   "A list of bills": "A list of bills",
   "Range Sum": "Range Sum",
   "Sum of all bills in the selected range.": "Sum of all bills in the selected range.",
