fix(locale):add missing keys

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -15,6 +15,7 @@
   "Payees": "المستفيدون",
   "Settings": "الاعدادات",
   "Logout": "تسجيل الخروج",
+  "Profile": "الملف الشخصي",
 
   "Adjust your application settings.": "ضبط اعدادات التطبيق",
   "Preferences": "التفضيلات",
@@ -32,6 +33,7 @@
   "Login": "تسجيل الدخول",
   "Enter your credentials below to login to your account": "ادخل بيانات الدخول الخاصة بك ادناه لتسجيل الدخول الى حسابك",
   "Invalid Credentials": "بيانات الدخول غير صحيحة",
+  "Your account has been deactivated": "تم تعطيل حسابك",
   "Login again": "تسجيل الدخول مرة اخرى",
   "Username": "اسم المستخدم",
   "Username is required": "اسم المستخدم مطلوب",
@@ -47,6 +49,7 @@
   "Something went wrong, please try again later.": "حدث خطأ ما, الرجاء المحاولة مرة اخرى لاحقا.",
 
   "Password": "كلمة المرور",
+  "Confirm Password": "تأكيد كلمة المرور",
   "Current password": "كلمة المرور الحالية",
   "New password": "كلمة المرور الجديدة",
   "Confirm password": "تأكيد كلمة المرور",
@@ -57,6 +60,7 @@
   "Changing your password will log you out from all devices.": "سيتم تسجيل الخروج من جميع الاجهزة عند تغيير كلمة المرور",
 
   "Success": "نجاح",
+  "Error": "خطأ",
   "Download": "تحميل",
   "Add": "اضافة",
   "Add New": "اضافة جديد",
@@ -65,8 +69,10 @@
   "Save": "حفظ",
   "Save Changes": "حفظ التعديلات",
   "Create": "انشاء",
+  "Update": "تحديث",
   "Cancel": "الغاء",
   "Close": "اغلاق",
+  "Required": "مطلوب",
 
   "Pull down to refresh": "اسحب للتحديث",
   "Release to refresh": "افلت للتحديث",
@@ -77,10 +83,13 @@
   "Search...": "البحث...",
   "from": "من",
   "to": "الى",
+  "Email": "البريد الالكتروني",
+  "Phone Number": "رقم الهاتف",
   "No Matching Results Found": "لا يوجد نتائج مطابقة",
   "No matching results": "لا يوجد نتائج مطابقة",
   "Invalid number": "رقم غير صحيح",
   "Description is required": "الوصف مطلوب",
+  "Date is required": "التاريخ مطلوب",
 
   "Remarks": "ملاحظات",
   "Description": "الوصف",
@@ -102,6 +111,26 @@
   "A list of worksheets": "قائمة السجلات",
   "Status": "الحالة",
   "Payment": "الدفعة",
+  "New Log": "سجل جديد",
+  "Absent": "غائب",
+  "Attended": "حضر",
+  "Enter the details for the new log": "ادخل تفاصيل السجل الجديد",
+  "Edit Log": "تعديل السجل",
+  "Edit the log details": "تعديل تفاصيل السجل",
+  "Work Hours": "ساعات العمل",
+  "Start Time": "وقت البدء",
+  "End Time": "وقت الانتهاء",
+  "Please provide a valid time": "الرجاء ادخال وقت صحيح",
+  "Worker": "العامل",
+  "Select a worker": "اختر العامل",
+  "Please select a worker.": "الرجاء اختيار العامل.",
+  "Start time is required.": "وقت البدء مطلوب.",
+  "End time is required.": "وقت الانتهاء مطلوب.",
+  "There is a record of this log already": "يوجد سجل بهذه التفاصيل بالفعل",
+  "This log already exists": "هذا السجل موجود بالفعل",
+  "Log was added successfully": "تمت اضافة السجل بنجاح",
+  "Log was updated successfully": "تم تعديل السجل بنجاح",
+  "Log was deleted successfully": "تم حذف السجل بنجاح",
 
   "BILLS": "الفواتير",
   "New Bill": "فاتورة جديدة",
@@ -121,17 +150,68 @@
   "Sum of all cheques in the selected range.": "مجموع الشيكات في الفترة المحددة.",
   "Filter by payee": "تصفية حسب المستفيد",
   "Serial No.": "الرقم التسلسلي",
+  "Cancelled": "ملغي",
+  "Payee": "المستفيد",
+  "Select a payee": "اختر المستفيد",
+  "Please select a payee.": "الرجاء اختيار المستفيد.",
+  "Payee not found": "المستفيد غير موجود",
+  "New Cheque": "شيك جديد",
+  "Enter the details for the new cheque": "ادخل تفاصيل الشيك الجديد",
+  "Cheque with this serial already exists.": "يوجد شيك بهذا الرقم التسلسلي بالفعل.",
+  "Serial already exists": "الرقم التسلسلي موجود بالفعل",
+  "Edit Cheque #{{serial}}": "تعديل الشيك {{serial}}",
+  "Edit the cheque details": "تعديل تفاصيل الشيك",
+  "Cheque #{{serial}}": "شيك #{{serial}}",
+  "Due Date": "تاريخ الاستحقاق",
+  "Due Date is required.": "تاريخ الاستحقاق مطلوب.",
+  "Cheque was added successfully": "تم اضافة الشيك بنجاح",
+  "Cheque was updated successfully": "تم تعديل الشيك بنجاح",
+  "Cheque was deleted successfully": "تم حذف الشيك بنجاح",
 
   "USERS": "المستخدمون",
+  "New User": "مستخدم جديد",
+  "Enter the details for the new user": "ادخل تفاصيل المستخدم الجديد",
+  "Edit User": "تعديل المستخدم",
+  "Edit the user details": "تعديل تفاصيل المستخدم",
+  "Resetting user password will log them out from all devices.": "اعادة تعيين كلمة مرور المستخدم سيقوم بتسجيل الخروج من جميع الاجهزة.",
+  "Reset Password": "اعادة تعيين كلمة المرور",
+  "Update user details.": "تحديث تفاصيل المستخدم.",
+  "Update Role, Active status, or delete user from the system.": "تحديث الدور, الحالة النشطة, او حذف المستخدم من النظام.",
+  "Active Status": "الحالة النشطة",
+  "User Role": "دور المستخدم",
+  "Delete User": "حذف المستخدم",
+  "User was added successfully": "تم اضافة المستخدم بنجاح",
+  "User was updated successfully": "تم تعديل المستخدم بنجاح",
+  "User was deleted successfully": "تم حذف المستخدم بنجاح",
+  "User's Password was reset successfully": "تم اعادة تعيين كلمة مرور المستخدم بنجاح",
+  "User's Role was updated successfully": "تم تعديل دور المستخدم بنجاح",
+  "User's Status was updated successfully": "تم تعديل حالة المستخدم بنجاح",
   "A list of users": "قائمة المستخدمون",
   "Full Name": "الاسم الكامل",
+  "First Name": "الاسم الاول",
+  "Last Name": "الاسم الاخير",
   "Role": "الدور",
   "Administrator": "مدير",
   "Moderator": "مشرف",
   "Spectator": "مراقب",
   "User": "مستخدم",
+  "Username is required.": "اسم المستخدم مطلوب.",
+  "Username is already taken.": "اسم المستخدم موجود بالفعل.",
+  "First name is required.": "الاسم الاول مطلوب.",
+  "Last name is required.": "الاسم الاخير مطلوب.",
+  "Passwords do not match.": "كلمات المرور غير متطابقة",
+  "Please provide a valid email": "الرجاء ادخال بريد الكتروني صحيح",
 
   "PAYEES": "المستفيدون",
+  "New Payee": "مستفيد جديد",
+  "Enter the details for the new payee": "ادخل تفاصيل المستفيد الجديد",
+  "Edit Payee": "تعديل المستفيد",
+  "Edit the payee details": "تعديل تفاصيل المستفيد",
+  "Name": "الاسم",
+  "Name is required": "الاسم مطلوب",
+  "Payee was added successfully": "تم اضافة المستفيد بنجاح",
+  "Payee was updated successfully": "تم تعديل المستفيد بنجاح",
+  "Payee was deleted successfully": "تم حذف المستفيد بنجاح",
   "A list of payees": "قائمة المستفيدون",
   "Payee Name": "اسم المستفيد",
 
