--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -15,6 +15,7 @@
   "Payees": "Payees",
   "Settings": "Settings",
   "Logout": "Logout",
+  "Profile": "Profile",
 
   "Adjust your application settings.": "Adjust your application settings.",
   "Preferences": "Preferences",
@@ -32,6 +33,7 @@
   "Login": "Login",
   "Enter your credentials below to login to your account": "Enter your credentials below to login to your account",
   "Invalid Credentials": "Invalid Credentials",
+  "Your account has been deactivated": "Your account has been deactivated",
   "Login again": "Login again",
   "Username": "Username",
   "Username is required": "Username is required",
@@ -48,6 +50,7 @@
 
   "Password": "Password",
   "Current password": "Current password",
+  "Confirm Password": "Confirm Password",
   "New password": "New password",
   "Confirm password": "Confirm password",
   "Change Password": "Change Password",
@@ -57,6 +60,7 @@
   "Changing your password will log you out from all devices.": "Changing your password will log you out from all devices.",
 
   "Success": "Success",
+  "Error": "Error",
   "Download": "Download",
   "Add": "Add",
   "Add New": "Add New",
@@ -65,8 +69,10 @@
   "Save": "Save",
   "Save Changes": "Save Changes",
   "Create": "Create",
+  "Update": "Update",
   "Cancel": "Cancel",
   "Close": "Close",
+  "Required": "Required",
 
   "Pull down to refresh": "Pull down to refresh",
   "Release to refresh": "Release to refresh",
@@ -77,10 +83,13 @@
   "Search...": "Search...",
   "from": "from",
   "to": "to",
+  "Email": "Email",
+  "Phone Number": "Phone Number",
   "No Matching Results Found": "No Matching Results Found",
   "No matching results": "No matching results",
   "Invalid number": "Invalid number",
   "Description is required": "Description is required",
+  "Date is required": "Date is required",
 
   "Remarks": "Remarks",
   "Description": "Description",
@@ -102,15 +111,35 @@
   "A list of worksheets": "A list of worksheets",
   "Status": "Status",
   "Payment": "Payment",
+  "Absent": "Absent",
+  "Attended": "Attended",
+  "New Log": "New Log",
+  "Enter the details for the new log": "Enter the details for the new log",
+  "Edit Log": "Edit Log",
+  "Edit the log details": "Edit the log details",
+  "Work Hours": "Work Hours",
+  "Start Time": "Start Time",
+  "End Time": "End Time",
+  "Please provide a valid time": "Please provide a valid time",
+  "Worker": "Worker",
+  "Select a worker": "Select a worker",
+  "Please select a worker.": "Please select a worker.",
+  "Start time is required": "Start time is required",
+  "End time is required": "End time is required",
+  "There is a record of this log already": "There is a record of this log already",
+  "This log already exists": "This log already exists",
+  "Log was added successfully": "Log was added successfully",
+  "Log was updated successfully": "Log was updated successfully",
+  "Log was deleted successfully": "Log was deleted successfully",
 
   "BILLS": "BILLS",
   "New Bill": "New Bill",
   "Enter the details for the new bill": "Enter the details for the new bill",
   "Edit Bill": "Edit Bill",
   "Edit the bill details": "Edit the bill details",
-  "Bill was added successfully.": "Bill was added successfully.",
-  "Bill was updated successfully.": "Bill was updated successfully.",
-  "Bill was deleted successfully.": "Bill was deleted successfully.",
+  "Bill was added successfully": "Bill was added successfully",
+  "Bill was updated successfully": "Bill was updated successfully",
+  "Bill was deleted successfully": "Bill was deleted successfully",
   "A list of bills": "A list of bills",
   "Range Sum": "Range Sum",
   "Sum of all bills in the selected range.": "Sum of all bills in the selected range.",
@@ -121,17 +150,68 @@
   "Sum of all cheques in the selected range.": "Sum of all cheques in the selected range.",
   "Filter by payee": "Filter by payee",
   "Serial No.": "Serial No.",
+  "Cancelled": "Cancelled",
+  "Payee": "Payee",
+  "Select a payee": "Select a payee",
+  "Please select a payee.": "Please select a payee.",
+  "Payee not found": "Payee not found",
+  "New Cheque": "New Cheque",
+  "Enter the details for the new cheque": "Enter the details for the new cheque",
+  "Cheque with this serial already exists.": "Cheque with this serial already exists.",
+  "Serial already exists": "Serial already exists",
+  "Edit Cheque #{{serial}}": "Edit Cheque {{serial}}",
+  "Edit the cheque details": "Edit the cheque details",
+  "Cheque #{{serial}}": "Cheque #{{serial}}",
+  "Due Date": "Due Date",
+  "Due Date is required": "Due Date is required",
+  "Cheque was added successfully": "Cheque was added successfully",
+  "Cheque was updated successfully": "Cheque was updated successfully",
+  "Cheque was deleted successfully": "Cheque was deleted successfully",
 
   "USERS": "USERS",
+  "New User": "New User",
+  "Enter the details for the new user": "Enter the details for the new user",
+  "Edit User": "Edit User",
+  "Edit the user details": "Edit the user details",
+  "Resetting user password will log them out from all devices.": "Resetting user password will log them out from all devices.",
+  "Reset Password": "Reset Password",
+  "Update user details.": "Update user details.",
+  "Update Role, Active status, or delete user from the system.": "Update Role, Active status, or delete user from the system.",
+  "Active Status": "Active Status",
+  "User Role": "User Role",
+  "Delete User": "Delete User",
+  "User was added successfully": "User was added successfully",
+  "User was updated successfully": "User was updated successfully",
+  "User was deleted successfully": "User was deleted successfully",
+  "User's Password was reset successfully": "User's Password was reset successfully",
+  "User's Role was updated successfully": "User's Role was updated successfully",
+  "User's Status was updated successfully": "User's Status was updated successfully",
   "A list of users": "A list of users",
   "Full Name": "Full Name",
+  "First Name": "First Name",
+  "Last Name": "Last Name",
   "Role": "Role",
   "Administrator": "Administrator",
   "Moderator": "Moderator",
   "Spectator": "Spectator",
   "User": "User",
+  "Username is required.": "Username is required.",
+  "Username is already taken.": "Username is already taken.",
+  "First name is required.": "First name is required.",
+  "Last name is required.": "Last name is required.",
+  "Passwords do not match.": "Passwords do not match.",
+  "Please provide a valid email": "Please provide a valid email",
 
   "PAYEES": "PAYEES",
+  "New Payee": "New Payee",
+  "Enter the details for the new payee": "Enter the details for the new payee",
+  "Edit Payee": "Edit Payee",
+  "Edit the payee details": "Edit the payee details",
+  "Name": "Name",
+  "Name is required": "Name is required",
+  "Payee was added successfully": "Payee was added successfully",
+  "Payee was updated successfully": "Payee was updated successfully",
+  "Payee was deleted successfully": "Payee was deleted successfully",
   "A list of payees": "A list of payees",
   "Payee Name": "Payee Name",
 
