feat(print):fixed light mode and scales

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -63,6 +63,7 @@
   "Error": "خطأ",
   "Download": "تحميل",
   "Add": "اضافة",
+  "Print": "طباعة",
   "Add New": "اضافة جديد",
   "Edit": "تعديل",
   "Delete": "حذف",
