--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -63,6 +63,7 @@
   "Error": "Error",
   "Download": "Download",
   "Add": "Add",
+  "Print": "Print",
   "Add New": "Add New",
   "Edit": "Edit",
   "Delete": "Delete",
