fix(cheques): force chose payee when creating

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -154,7 +154,7 @@
   "Cancelled": "ملغي",
   "Payee": "المستفيد",
   "Select a payee": "اختر المستفيد",
-  "Please select a payee.": "الرجاء اختيار المستفيد.",
+  "Please select a payee": "الرجاء اختيار المستفيد",
   "Payee not found": "المستفيد غير موجود",
   "New Cheque": "شيك جديد",
   "Enter the details for the new cheque": "ادخل تفاصيل الشيك الجديد",
