--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -154,7 +154,7 @@
   "Cancelled": "Cancelled",
   "Payee": "Payee",
   "Select a payee": "Select a payee",
-  "Please select a payee.": "Please select a payee.",
+  "Please select a payee": "Please select a payee",
   "Payee not found": "Payee not found",
   "New Cheque": "New Cheque",
   "Enter the details for the new cheque": "Enter the details for the new cheque",
