fix(multi-select):missing locale

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -82,6 +82,7 @@
   "Pick a date": "اختر تاريخ",
   "Search": "البحث",
   "Search...": "البحث...",
+  "Clear filters": "مسح التصفية",
   "from": "من",
   "to": "الى",
   "Email": "البريد الالكتروني",
