--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -82,6 +82,7 @@
   "Pick a date": "Pick a date",
   "Search": "Search",
   "Search...": "Search...",
+  "Clear filters": "Clear filters",
   "from": "from",
   "to": "to",
   "Email": "Email",
